apps/cabot-cup/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cabot-cup
  namespace: cabot-cup
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: cabot-cup
  template:
    metadata:
      labels:
        app: cabot-cup
    spec:
      containers:
        - name: cabot-cup
          image: ghcr.io/dgunzy/ejs-cabot-app:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 3000
