apps/cabot-cup/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cabot-cup
  namespace: cabot-cup
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy-gateway-system
      sectionName: https-cabotcup
  hostnames:
    - "cabotcup.ca"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cabot-cup-service
          port: 7070
